--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <container>
+            <header class="a_tbdr">
+                <div></div>
+            </header>
+            <main class="a_tbdr">
+                <div class="A_1 a_tbdr">A</div>
+            </main>
+            <footer>C</footer>
+        </container>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
