--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <body>
         <container>
             <header class="a_tbdr">
-                <div></div>
+                <div class="row m-0 a_tbdr">
+                    <div class="col-1 a_tbdr">
+                        <h4>
+                            <i style="color: #2F59E6;">Flipkart</i>
+                        </h4>
+                    </div>
+                    <div class="col-6 a_tbdr">2</div>
+                    <div class="col-1 a_tbdr">3</div>
+                    <div class="col-1 a_tbdr">4</div>
+                    <div class="col-1 a_tbdr">5</div>
+                    <div class="col-1 a_tbdr">6</div>
+                    <div class="col-1 a_tbdr">7</div>
+                </div>
             </header>
             <main class="a_tbdr">
                 <div class="A_1 a_tbdr">A</div>
