--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
         <container>
             <header class="a_tbdr">
                 <div class="row m-0 a_tbdr">
-                    <div class="col-1 a_tbdr">
-                        <h4>
-                            <i style="color: #2F59E6;">Flipkart</i>
-                        </h4>
+                    <div class="col-2 a_tbdr">                      
+                        <i class="fw-bold fs-5" style="color: #2F59E6;margin-left: 110px;">Flipkart</i>
+                        <br><i class="fs-6" style="margin-left: 90px;">Explore<span class="ms-1 mt-0" style="color: #FFC218;">plus<img class="img-fluid ms-1" src="./img/plus1.svg"></span></i>      
                     </div>
-                    <div class="col-6 a_tbdr">2</div>
+                    <div class="col-5 a_tbdr">
+                        <nav class="navbar bg-body-tertiary">
+                            <form class="container-fluid mt-1">
+                                <div class="input-group">
+                                    <span class="input-group-text" id="basic-addon1">@</span>
+                                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                                </div>
+                            </form>
+                        </nav>
+                    </div>
                     <div class="col-1 a_tbdr">3</div>
                     <div class="col-1 a_tbdr">4</div>
                     <div class="col-1 a_tbdr">5</div>
