--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
                                 </div>
                             </form>
                         </nav>
-                    </div>
-                    <div class="col-1 a_tbdr">3</div>
-                    <div class="col-1 a_tbdr">4</div>
-                    <div class="col-1 a_tbdr">5</div>
-                    <div class="col-1 a_tbdr">6</div>
-                    <div class="col-1 a_tbdr">7</div>
+                    </div> 
+                    <div class="col-2 a_tbdr"><img class="img-fluid" src="./img/Store.svg">Become a Seller</div>
+                    <div class="col-1 a_tbdr"><img class="img-fluid" src="./img/profile.svg">Sign in<img class="img-fluid" src="./img/download.svg"></div>
+                    <div class="col-1 a_tbdr ms-1 mt-3"><img class="img-fluid" src="./img/header.svg">Cart</div>
+                    <div class="col-1 a_tbdr mt-3 ms-1"><img class="img-fluid" src="./img/header_3.svg"></div>
                 </div>
             </header>
             <main class="a_tbdr">
