--- a/index.html
+++ b/index.html
@@ -9,30 +9,54 @@
     </head>
     <body>
         <container>
-            <header class="a_tbdr">
+            <header class="a_tbdr position-fixed">
                 <div class="row m-0 a_tbdr">
-                    <div class="col-2 a_tbdr">                      
+                    <div class="col-2 m-0 p-0">                      
                         <i class="fw-bold fs-5" style="color: #2F59E6;margin-left: 110px;">Flipkart</i>
                         <br><i class="fs-6" style="margin-left: 90px;">Explore<span class="ms-1 mt-0" style="color: #FFC218;">plus<img class="img-fluid ms-1" src="./img/plus1.svg"></span></i>      
                     </div>
-                    <div class="col-5 a_tbdr">
+                    <div class="col-4 a_tbdr m-0 p-0 ms-0">
                         <nav class="navbar bg-body-tertiary">
                             <form class="container-fluid mt-1">
-                                <div class="input-group">
-                                    <span class="input-group-text" id="basic-addon1">@</span>
+                                <div class="input-group ms-0">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <img class="img-fluid p-0" src="./img/search2_hrd.svg"></span>
                                     <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                                 </div>
                             </form>
                         </nav>
                     </div> 
-                    <div class="col-2 a_tbdr"><img class="img-fluid" src="./img/Store.svg">Become a Seller</div>
-                    <div class="col-1 a_tbdr"><img class="img-fluid" src="./img/profile.svg">Sign in<img class="img-fluid" src="./img/download.svg"></div>
-                    <div class="col-1 a_tbdr ms-1 mt-3"><img class="img-fluid" src="./img/header.svg">Cart</div>
-                    <div class="col-1 a_tbdr mt-3 ms-1"><img class="img-fluid" src="./img/header_3.svg"></div>
+                    <div class="col-2 mt-3 ms-5 p-0"><img class="img-fluid me-3" src="./img/Store.svg">Become a Seller</div>
+                    <div class="col-1 ms-0 mt-3 p-0"><img class="img-fluid me-3" src="./img/profile.svg">Sign in<img class="img-fluid ms-3" src="./img/download.svg"></div>
+                    <div class="col-1 ms-5 p-0 mt-3"><img class="img-fluid me-3" src="./img/header.svg">Cart</div>
+                    <div class="col-1 m-0 p-0 mt-3"><img class="img-fluid" src="./img/header_3.svg"></div>
                 </div>
             </header>
             <main class="a_tbdr">
-                <div class="A_1 a_tbdr">A</div>
+                <div class="A_1 a_tbdr">a</div>
+                <div class="A_2 a_tbdr">
+                    <ul class="nav a_tbdr">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">
+                            <img class="img-fluid" src="./img/a1.png" /><br><span>Grocery</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <img class="img-fluid" src="./img/a2.png" /><br><span>Mobiles</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <img class="img-fluid" src="./img/a1.png" />
+                            <br><span>Fashion</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Disabled</a>
+                        </li>
+                      </ul>
+                </div>
             </main>
             <footer>C</footer>
         </container>
