--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">
-                            <img class="img-fluid" src="./img/a1.png" />
+                            <img class="img-fluid" src="./img/a3.png" />
+                            <img class="img-fluid" src="./img/a4.svg" />
                             <br><span>Fashion</span>
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Disabled</a>
+                          <a class="nav-link" href="#">
+                            <img class="img-fluid" src="./img/a5.png" />
+                            <br><span>Electronics</span>
+                          </a>
                         </li>
                       </ul>
                 </div>
